--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <div class="navbar-header">
         <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="involved.html">Get Involved</a></li>
                 <li><a href="programming.html">Programming</a></li>
                 <li><a href="co-productions.html">Co-Productions</a></li>
@@ -23,7 +23,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right" style="padding-right:30px">
                 <li><a href="hire.html">Hire WUTV</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li class="active"><a href="about.html">About Us</a></li>
             </ul>
         </ul>
     </div>
