--- a/festivals.html
+++ b/festivals.html
@@ -15,11 +15,11 @@
     <div class="navbar-header">
         <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="involved.html">Get Involved</a></li>
                 <li><a href="programming.html">Programming</a></li>
                 <li><a href="co-productions.html">Co-Productions</a></li>
-                <li><a href="festivals.html">Festivals</a></li>
+                <li class="active"><a href="festivals.html">Festivals</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right" style="padding-right:30px">
                 <li><a href="hire.html">Hire WUTV</a></li>
