--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,8 +9,8 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
 
-   
   </head>
   <body>
     <div class="navbar-header">
@@ -35,7 +36,24 @@
         </div>
     </div>
     
-    
+    <div class="page-header">
+        <img src="img/studio.jpg" style="width:100%;height:100%"></img>
+        <h3>Newest content</h3>
+        <div class="col-md-6">
+            <iframe width="560" height="315" src="//www.youtube.com/embed/uq02ChLnluE" frameborder="0" allowfullscreen></iframe>
+            <p>Wash U News Episode 2: Thanksgiving Special</p>
+            <br>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/c_ndycqAwGY" frameborder="0" allowfullscreen></iframe>
+            <p>A Shot At Glory: Night at the Museum</p>
+        </div>
+        <div class="col-md-6">
+            <iframe width="560" height="315" src="//www.youtube.com/embed/xWu4J1hjh48" frameborder="0" allowfullscreen></iframe>
+            <p>Phantom Limb Music: Pilot</p>
+            <br>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/Z8WM1KCiBZs" frameborder="0" allowfullscreen></iframe>
+            <p>"Perspective": A Short Film by Ricardo Solis</p>
+        </div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
