--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="jumbotron">
-        <img src="img/WUTV logo 2.png" style="width:100%;height:100%;padding:15px;float:left"></img>
+        <img src="img/WUTV Logo 2.png" style="width:100%;height:100%;padding:15px;float:left"></img>
         <div class="text-center">
             <h1><small>We're easy. Just turn us on.</small></h1>
         </div>
