--- a/involved.html
+++ b/involved.html
@@ -38,6 +38,8 @@
     
     <div class="page-header">
         <img src="img/studio.jpg" style="width:100%;height:100%"></img>
+        <h3>Want to get involved with WUTV?</h3>
+        <p>Great!  There are a variety of ways to apply your talents and build experience in television programming.  Whether you want to start a show of your own, join an existing show, become a staff member of WUTV or even work your way up to an executive position, WUTV has the resources to get it done.  Check out pages listed below, or come to one of our meetings in the Danforth University Center Harvey Media Center, Saturdays at 1:00pm.</p>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
