--- a/festivals.html
+++ b/festivals.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href='http://fonts.googleapis.com/css?family=Robot+Condensed'rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@
     </div>
 
     <div class="jumbotron">
-        <img src="img/WUTV logo 2.png" style="width:100%;height:100%;padding:15px;float:left"></img>
+        <img src="img/logo.jpg" style="width:100%;height:100%;padding:15px;float:left"></img>
         <div class="text-center">
             <h1><small>We're easy. Just turn us on.</small></h1>
         </div>
