--- a/involved.html
+++ b/involved.html
@@ -39,7 +39,15 @@
     <div class="page-header">
         <img src="img/studio.jpg" style="width:100%;height:100%"></img>
         <h3>Want to get involved with WUTV?</h3>
-        <p>Great!  There are a variety of ways to apply your talents and build experience in television programming.  Whether you want to start a show of your own, join an existing show, become a staff member of WUTV or even work your way up to an executive position, WUTV has the resources to get it done.  Check out pages listed below, or come to one of our meetings in the Danforth University Center Harvey Media Center, Saturdays at 1:00pm.</p>
+        <p>Great!  There are a variety of ways to apply your talents and build experience in television programming.  Whether you want to start a show of your own, join an existing show, become a staff member of WUTV or even work your way up to an executive position, WUTV has the resources to get it done.  Check out pages listed on this site, or come to one of our meetings in the Danforth University Center Harvey Media Center, Saturdays at 1:00pm.</p>
+        <h3>Become a WUTV Staff Member</h3>
+        <p>All Wash U students are welcome to join WUTV.  Meet other talented individuals that share your passion for creativity and digital media.  Not into the videomaking thing?  WUTV also has opportunities to get experience in management, marketing, finances, communication design, event planning, and more!  If you have a skill, WUTV can help you develop and hone it.  No skills? That’s cool, too. We'll teach you everything you need to know.</p>
+        <h3>Start or join a show</h3>
+        <p>Have a great idea for a show?  It’s surprisingly easy to make your idea a reality, and you’ll find everything you need to get started at WUTV. Furthermore, there are plenty of active shows that could use your help, as well as new shows that are looking for cast and crew members.</p>
+        <h3>Become a WUTV Executive</h3>
+        <p>The WUTV staff holds elections for all exec positions at end of the spring semester, and any vacated positions are filled going into the fall semester.  Execs are given greater responsibilities and help shape WUTV for better or worse.  Looks great on a resume, too!</p>
+        <h3>Come to a WUTV meeting or <a href="mailto:wutv22@gmail.com">contact us</a> to get started!</h3>
+        
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
