--- a/hire.html
+++ b/hire.html
@@ -44,6 +44,7 @@
         <p>Let us know about your project in the form below. We'll match you with an independent contractor who will contact you with a quote.</p>
     </div>
     
+    <div class="text-center">
     <form name="htmlform" method="post" action="html_form_send.php">
         <table width="450px">
             </tr>
@@ -97,6 +98,7 @@
             </tr>
         </table>
     </form>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
