--- a/programming.html
+++ b/programming.html
@@ -13,6 +13,7 @@
    
   </head>
   <body>
+  <div class="gradient">
     <div class="navbar-header">
         <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
             <ul class="nav navbar-nav">
@@ -30,15 +31,15 @@
     </div>
 
     <div class="jumbotron">
-        <img src="img/logo.jpg" style="width:100%;height:100%;padding:15px;float:left"></img>
-        <div class="text-center">
-            <h1><small>We're easy. Just turn us on.</small></h1>
-        </div>
+        <img src="img/logo.jpg" style="width:25%;height:25%;padding:15px;float:left"></img>
+        <br>
+        <h1><small>We're easy. Just turn us on.</small></h1>
     </div>
-    
+
     <div class="page-header">
         <img src="img/studio.jpg" style="width:100%;height:100%"></img>
     </div>
+</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
