--- a/programming.html
+++ b/programming.html
@@ -38,6 +38,34 @@
 
     <div class="page-header">
         <img src="img/studio.jpg" style="width:100%;height:100%"></img>
+        <h3>Programming</h3>
+        <p>WUTV tries to create an environment in which any individual looking to put on a campus television show can walk-in, get approved, and get started. Striving to help Wash. U. students and campus groups, we go beyond to teach and assist people with the technical aspects of film production. If you are interested in creating a television show or even just getting involved in an established show, with minimal training you can be on your way to success.</p>
+        <h3>What makes a WUTV show?</h3>
+        <p>A WUTV show is defined as any WUTV member's production that was pitched at a meeting or that was created at least in part by WUTV members. While WUTV reserves the right to deny to producer or distrubute any  production that is pitched to us, we have very few rules for what you can do with us! Even if you haven't seen something like your idea on WUTV, we'd love to help you turn your idea into a video.</p>
+        <h3>Current shows<small> Available for viewing at <a href="www.youtube.com/wutv22">our YouTube page</small></a></h3>
+        <img src="img/bgates.jpg" style="padding-right:15px;padding-bottom:15px;float:right;"></img>
+        <img src="img/cnb.jpg" style="padding-right:15px;padding-bottom:15px;float:right;"></img>
+        <img src="img/bootcamp.jpg" style="padding-right:15px;padding-bottom:15px;float:right;"></img>
+        <img src="img/preo.jpg" style="padding-right:15px;float:right;"></img>
+        <img src="img/exec2012.jpg" style="width:315px;height:200px;padding-right:15px;float:right;"></img>
+        <img src="img/sohrab.jpg" style="padding-right:15px;float:right;"></img>
+        <a href="https://www.youtube.com/watch?v=LI8g-txs_8Q&list=PLJ5JZ2Az_VNdGUykkyjRVQJo51L3J9jQp">Adventure Series</a><br>
+        <a href="https://www.youtube.com/watch?v=Kn3QFrGnV9o&list=PLJ5JZ2Az_VNdQ9tSHX9FdVknuKenfj3qc">WUTV Cribz</a><br>
+        <a href="https://www.youtube.com/watch?v=KLJt6IkfniE&list=PLJ5JZ2Az_VNfTapqeGcE50yii0hgVTjGI">CrossCut Productions</a><br>
+        <a href="https://www.youtube.com/watch?v=BhxmHdP8YsY&list=PLJ5JZ2Az_VNet_gr7pW5zbhvM43_i8Y4Q">The Dating Game</a><br>
+        <a href="https://www.youtube.com/watch?v=dCTDakeDT7M&list=PLJ5JZ2Az_VNe5NSVOgTjd1i3F1ALs7DtI">In the Spotlight</a><br>
+        <a href="https://www.youtube.com/watch?v=baWo34Jb7Zg&list=PLJ5JZ2Az_VNezXFHZ4mOOqrXF3df9fmEU">KWUR Stack Sessions</a><br>
+        <a href="https://www.youtube.com/watch?v=xWu4J1hjh48&list=PLJ5JZ2Az_VNfWcJLpixEki-vCQWgfWc0_">Phantom Limb Music</a><br>
+        <a href="https://www.youtube.com/watch?v=5Mq_6NLSOsw&list=PLJ5JZ2Az_VNeno1k8Bdlu1mxLDYsmTaUF">Professor and a Puppet</a><br>
+        <a href="https://www.youtube.com/watch?v=7Ta3rLdfu80&list=PLJ5JZ2Az_VNf0a6dfIozICq1tac1mpD7C">Wash U News</a><br>
+        <a href="https://www.youtube.com/watch?v=qKTkiQTQmLQ&list=PLJ5JZ2Az_VNfYDUB8PeH_7kjrPIggxvtX">WU's Line is it Anyway?</a><br>
+        <a href="https://www.youtube.com/watch?v=fBySgoF5onk&list=PLJ5JZ2Az_VNfNhKtoMMYLISFYXvXQHFId">WUTV Microfilms</a><br>
+        <h3>Past shows</h3>
+        <a href="https://www.youtube.com/watch?v=yQTpgnTPE_M&list=PLJ5JZ2Az_VNfME6eq1FBjUJNMBCdOQZHf">Coeds In Beds</a><br>
+        <a href="https://www.youtube.com/watch?v=8HhxO8onugM&list=PLJ5JZ2Az_VNeO6-uIAtt3K_8F3TTA93iw">Paws 'n' Go Chopped</a><br>
+        <a href="https://www.youtube.com/watch?v=J1tCQJVqOdQ&list=PLF9BB4B9723E87A4C">WU Safari</a><br><br><br><br><br>
+        
+        <h3>For more information, <a href="contact.html">contact us</a> or come to a WUTV general body meeting!</h3>
     </div>
 </div>
 
