--- a/hire.html
+++ b/hire.html
@@ -119,6 +119,10 @@
         </table>
     </form>
 </div>
+
+    <div class="text-center">
+        <h1><span class="glyphicon glyphicon-forward"></span></h1>
+    </div>
 </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
