--- a/co-productions.html
+++ b/co-productions.html
@@ -39,6 +39,10 @@
     <div class="page-header">
         <img src="img/studio.jpg" style="width:100%;height:100%"></img>
     </div>
+    
+    <div class="text-center">
+        <h1><span class="glyphicon glyphicon-forward"></span></h1>
+    </div>
 </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
