--- a/programming.html
+++ b/programming.html
@@ -67,6 +67,10 @@
         
         <h3>For more information, <a href="contact.html">contact us</a> or come to a WUTV general body meeting!</h3>
     </div>
+
+    <div class="text-center">
+        <h1><span class="glyphicon glyphicon-forward"></span></h1>
+    </div>
 </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
