--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
             <p>"Perspective": A Short Film by Ricardo Solis</p>
         </div>
     </div>
-    
+
+<div class="container">
     <div class="text-center">
         <h1><span class="glyphicon glyphicon-forward"></span></h1>
     </div>
+</div>
 </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
