--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <ul class="nav navbar-nav navbar-right" style="padding-right:30px">
                 <li><a href="hire.html">Hire WUTV</a></li>
                 <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </ul>
     </div>
