--- a/involved.html
+++ b/involved.html
@@ -39,14 +39,16 @@
 
     <div class="page-header">
         <h3>Want to get involved with WUTV?</h3>
-        <p>Great!  There are a variety of ways to apply your talents and build experience in television programming.  Whether you want to start a show of your own, join an existing show, become a staff member of WUTV or even work your way up to an executive position, WUTV has the resources to get it done.  Check out pages listed on this site, or come to one of our meetings in the Danforth University Center Harvey Media Center, Saturdays at 1:00pm.</p>
+        <p>Great! There are a variety of ways to apply your talents and build experience in video production. Whether you want to start a show of your own, join an existing show, make a movie, become a staff member of WUTV, or even fill an executive role, WUTV has the resources to get it done. Check out pages listed on this site, or come to one of our meetings in the Danforth University Center Harvey Media Center, Saturdays at 1:00pm.</p>
         <h3>Become a WUTV Staff Member</h3>
-        <p>All Wash U students are welcome to join WUTV.  Meet other talented individuals that share your passion for creativity and digital media.  Not into the videomaking thing?  WUTV also has opportunities to get experience in management, marketing, finances, communication design, event planning, and more!  If you have a skill, WUTV can help you develop and hone it.  No skills? That’s cool, too. We'll teach you everything you need to know.</p>
-        <h3>Start or join a show</h3>
-        <p>Have a great idea for a show?  It’s surprisingly easy to make your idea a reality, and you’ll find everything you need to get started at WUTV. Furthermore, there are plenty of active shows that could use your help, as well as new shows that are looking for cast and crew members.</p>
+        <p>All Wash U students are welcome to join WUTV. Meet other talented individuals that share your passion for creativity and digital media. No skills? That’s find by us. The unique thing about our group is that we have the resources, expertise, and passion passed down from generation to generation to teach <em>you</em> everything you need to know. Pretty cool, huh?</p>
+        <h3>Not into video production?</h3>
+        <p>That's okay. WUTV also has opportunities to get experience in management, marketing, finances, communication design, event planning, and more! If you have a skill or interest, WUTV can help you develop and hone it. In fact, most of our executives are not film majors, and have totally different career aspirations. Our group can be relevant to your personal and professional development, whether you're pre-med or a painter, a biomedical engineer or a business major.</h3>
+        <h3>Start or join a production</h3>
+        <p>Have a great idea for a video? It’s surprisingly easy to make your idea a reality, and you’ll find everything you need to get started at WUTV. Furthermore, there are plenty of active shows that could use your help, as well as new shows that are looking for cast and crew members.</p>
         <h3>Become a WUTV Executive</h3>
-        <p>The WUTV staff holds elections for all exec positions at end of the spring semester, and any vacated positions are filled going into the fall semester.  Execs are given greater responsibilities and help shape WUTV for better or worse.  Looks great on a resume, too!</p>
-        <h3>Come to a WUTV meeting or <a href="mailto:wutv22@gmail.com">contact us</a> to get started!</h3>
+        <p>The WUTV staff holds elections for all executive positions at end of the spring semester, and any vacated positions are filled going into the fall semester. Execs are given greater responsibilities and help shape WUTV for better or worse. We're a pretty tight-knit group, and we are all committed to WUTV's future. An executive position looks great on a resume, too!</p>
+        <h3>Come to a WUTV meeting or <a href="contact.html">contact us</a> to get started!</h3>
         <br>
         <h3>WUTV Hall of Fame</h3>
         <h4>21st Century WUTV Leadership:</h4>
