--- a/programming.html
+++ b/programming.html
@@ -39,9 +39,10 @@
 
     <div class="page-header">
         <h3>Programming</h3>
-        <p>WUTV tries to create an environment in which any individual looking to put on a campus television show can walk-in, get approved, and get started. Striving to help Wash. U. students and campus groups, we go beyond to teach and assist people with the technical aspects of film production. If you are interested in creating a television show or even just getting involved in an established show, with minimal training you can be on your way to success.</p>
-        <h3>What makes a WUTV show?</h3>
-        <p>A WUTV show is defined as any WUTV member's production that was pitched at a meeting or that was created at least in part by WUTV members. While WUTV reserves the right to deny to producer or distrubute any  production that is pitched to us, we have very few rules for what you can do with us! Even if you haven't seen something like your idea on WUTV, we'd love to help you turn your idea into a video.</p>
+        <p>WUTV tries to create an environment in which any individual looking to create content can walk in and get started. As part of our mission as a group, we strive to help Wash U students and campus groups through teaching the technical aspects of film production to anyone who expresses an interest in learning. If you are interested in creating video content with WUTV or even just getting involved in an established show, with minimal training you can be on your way to success!</p>
+        <h3>What makes a WUTV "show"?</h3>
+        <p>We use the word "show" to describe any piece of content created with the intent to eventually become serialized. Because WUTV used to consist largely of actual shows that were produced and aired on a regular basis, the term has stuck, although we admit it's a bit anachronistic.</p>
+        <p>In this age of digital production, we define a WUTV "show" as any WUTV member's production that was pitched at a meeting or that was created at least in part by WUTV members. While WUTV reserves the right to deny to produce or distrubute any  production that is pitched to us, we have very few rules for what you can do with us! Even if you haven't seen something like your idea on WUTV, we'd love to help you turn your idea into a video. And it doesn't have to be serialized at all – we're happy to help you with your short film or one-off production, too.</p>
         <h3>Current shows<small> Available for viewing at <a href="www.youtube.com/wutv22">our YouTube page</small></a></h3>
         <img src="img/bgates.jpg" style="padding-right:15px;padding-bottom:15px;float:right;"></img>
         <img src="img/cnb.jpg" style="padding-right:15px;padding-bottom:15px;float:right;"></img>
