--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
+        <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed" rel='stylesheet' type='text/css'>
             <meta charset="utf-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,8 +20,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="involved.html">Get Involved</a></li>
                 <li><a href="programming.html">Programming</a></li>
-                <li><a href="co-productions.html">Co-Productions</a></li>
-                <li><a href="festivals.html">Festivals</a></li>
+               <!--comment out for now <li><a href="co-productions.html">Co-Productions</a></li>
+                <li><a href="festivals.html">Festivals</a></li> -->
             </ul>
             <ul class="nav navbar-nav navbar-right" style="padding-right:30px">
                 <li><a href="hire.html">Hire WUTV</a></li>
