--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,16 @@
 </head>
 <body>
 <div class="gradient">
+
+<div class="visible-lg visible-md visible-sm">
     <div class="navbar-header">
         <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="involved.html">Get Involved</a></li>
                 <li><a href="programming.html">Programming</a></li>
-               <!--comment out for now <li><a href="co-productions.html">Co-Productions</a></li>
-                <li><a href="festivals.html">Festivals</a></li> -->
+                <!--comment out for now <li><a href="co-productions.html">Co-Productions</a></li>
+                 <li><a href="festivals.html">Festivals</a></li> -->
             </ul>
             <ul class="nav navbar-nav navbar-right" style="padding-right:30px">
                 <li><a href="hire.html">Hire WUTV</a></li>
@@ -30,7 +32,27 @@
             </ul>
         </ul>
     </div>
-            
+</div>
+
+<div class="visible-xs">
+    <div class="navbar-header">
+        <ul class="navbar navbar-default" role="navigation">
+            <ul class="nav navbar-nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="involved.html">Get Involved</a></li>
+                <li><a href="programming.html">Programming</a></li>
+                <!--comment out for now <li><a href="co-productions.html">Co-Productions</a></li>
+                 <li><a href="festivals.html">Festivals</a></li> -->
+            </ul>
+            <ul class="nav navbar-nav navbar-right" style="padding-right:30px">
+                <li><a href="hire.html">Hire WUTV</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li class="active"><a href="contact.html">Contact</a></li>
+            </ul>
+        </ul>
+    </div>
+</div>
+
     <div class="jumbotron">
         <img src="img/logo.jpg" style="width:25%;height:25%;padding:15px;float:left"></img>
         <br>
@@ -55,7 +77,7 @@
         <p>Packages:</p>
         <p>Washington University in St. Louis<br>WUTV<br>Danforth University Center Room 355<br>6475 Forsyth Boulevard<br>St. Louis, MO 63105</p>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-9 hidden-xs hidden-sm">
           <br>
           <img src="img/exec2014.jpg" style="float:right;padding:15px;width:75%;height:75%;"></img>
           <img src="img/weirdexec2014.jpg" style="float:right;padding:15px;width:75%;height:75%;"></img>
