--- a/hire.html
+++ b/hire.html
@@ -13,23 +13,47 @@
    
   </head>
   <body>
+  
   <div class="gradient">
-    <div class="navbar-header">
-        <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
-            <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="involved.html">Get Involved</a></li>
-                <li><a href="programming.html">Programming</a></li>
-                <!--comment out for now <li><a href="co-productions.html">Co-Productions</a></li>
-                 <li><a href="festivals.html">Festivals</a></li> -->            </ul>
-            <ul class="nav navbar-nav navbar-right" style="padding-right:30px">
-                <li class="active"><a href="hire.html">Hire WUTV</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </ul>
-    </div>
-
+  
+  <div class="visible-lg visible-md visible-sm">
+      <div class="navbar-header">
+          <ul class="navbar navbar-default navbar-fixed-top" role="navigation">
+              <ul class="nav navbar-nav">
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="involved.html">Get Involved</a></li>
+                  <li><a href="programming.html">Programming</a></li>
+                  <!--comment out for now <li><a href="co-productions.html">Co-Productions</a></li>
+                   <li><a href="festivals.html">Festivals</a></li> -->
+              </ul>
+              <ul class="nav navbar-nav navbar-right" style="padding-right:30px">
+                  <li class="active"><a href="hire.html">Hire WUTV</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+              </ul>
+          </ul>
+      </div>
+  </div>
+  
+  <div class="visible-xs">
+      <div class="navbar-header">
+          <ul class="navbar navbar-default" role="navigation">
+              <ul class="nav navbar-nav">
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="involved.html">Get Involved</a></li>
+                  <li><a href="programming.html">Programming</a></li>
+                  <!--comment out for now <li><a href="co-productions.html">Co-Productions</a></li>
+                   <li><a href="festivals.html">Festivals</a></li> -->
+              </ul>
+              <ul class="nav navbar-nav navbar-right" style="padding-right:30px">
+                  <li class="active"><a href="hire.html">Hire WUTV</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+              </ul>
+          </ul>
+      </div>
+  </div>
+  
     <div class="jumbotron">
         <img src="img/logo.jpg" style="width:25%;height:25%;padding:15px;float:left"></img>
         <br>
