--- a/programming.html
+++ b/programming.html
@@ -84,7 +84,7 @@
             <a href="https://www.youtube.com/watch?v=J1tCQJVqOdQ&list=PLF9BB4B9723E87A4C">WU Safari</a><br><br><br><br><br>
         </div>
         <div class="container">
-        <div class="visible-lg">
+          <div class="visible-lg">
             <div class="col-md-3">
                 <img src="img/bgates.jpg" style="padding-right:15px;padding:15px;"></img>
                 <img src="img/cnb.jpg" style="padding-right:15px;padding:15px;"></img>
@@ -97,15 +97,20 @@
                 <img src="img/exec2012.jpg" style="width:330px;height:230px;padding:15px;"></img>
                 <img src="img/sohrab.jpg" style="padding:15px;"></img>
             </div>
-        </div>
-        </div>
-        <div class="container">
-        <h3>For more information, <a href="contact.html">contact us</a> or come to a WUTV general body meeting!</h3>
+          </div>
         </div>
 
+    <h3>For more information, <a href="contact.html">contact us</a> or come to a WUTV general body meeting!</h3>
+    <br><br>
+    <div class="text-center">
+        <a href="guide.html" class="btn btn-primary btn-lg active" role="button">Read:<br>A Pretty Good Guide<br>for Making Pretty Good<br>Student TV</a>
+        <br>
+    </div>
     <div class="text-center">
         <h1><span class="glyphicon glyphicon-forward"></span></h1>
     </div>
+    
+</div>
 </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
