--- a/guide.html
+++ b/guide.html
@@ -40,7 +40,7 @@
                         <ul class="nav navbar-nav">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="involved.html">Get Involved</a></li>
-                            <li><a href="programming.html">Programming</a></li>
+                            <li class="active"><a href="programming.html">Back</a></li>
                             <!--comment out for now <li><a href="co-productions.html">Co-Productions</a></li>
                              <li><a href="festivals.html">Festivals</a></li> -->
                         </ul>
