--- a/guide.html
+++ b/guide.html
@@ -7,9 +7,9 @@
                     <meta name="viewport" content="width=device-width, initial-scale=1">
                         <title>WUTV</title>
                         
-                        <!-- Bootstrap -->
-                        <link href="css/bootstrap.min.css" rel="stylesheet">
-                            <link href="css/custom.css" rel="stylesheet">
+    <!-- Bootstrap -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+            <link href="css/custom.css" rel="stylesheet">
                                 
     </head>
     <body>
@@ -21,7 +21,7 @@
                         <ul class="nav navbar-nav">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="involved.html">Get Involved</a></li>
-                            <li class="active"><a href="programming.html">Programming</a></li>
+                            <li class="active"><a href="programming.html">Back</a></li>
                             <!--comment out for now <li><a href="co-productions.html">Co-Productions</a></li>
                              <li><a href="festivals.html">Festivals</a></li> -->
                         </ul>
