--- a/programming.html
+++ b/programming.html
@@ -83,22 +83,21 @@
             <a href="https://www.youtube.com/watch?v=8HhxO8onugM&list=PLJ5JZ2Az_VNeO6-uIAtt3K_8F3TTA93iw">Paws 'n' Go Chopped</a><br>
             <a href="https://www.youtube.com/watch?v=J1tCQJVqOdQ&list=PLF9BB4B9723E87A4C">WU Safari</a><br><br><br><br><br>
         </div>
-        <div class="container">
-          <div class="visible-lg">
+            <div class="visible-lg">
             <div class="col-md-3">
-                <img src="img/bgates.jpg" style="padding-right:15px;padding:15px;"></img>
-                <img src="img/cnb.jpg" style="padding-right:15px;padding:15px;"></img>
+                <img src="img/bgates.jpg" style="padding:15px;"></img>
+                <img src="img/cnb.jpg" style="padding:15px;"></img>
             </div>
             <div class="col-md-3">
-                <img src="img/bootcamp.jpg" style="padding-right:15px;padding:15px;"></img>
+                <img src="img/bootcamp.jpg" style="padding:15px;"></img>
                 <img src="img/preo.jpg" style="padding:15px;"></img>
             </div>
             <div class="col-md-3">
-                <img src="img/exec2012.jpg" style="width:330px;height:230px;padding:15px;"></img>
-                <img src="img/sohrab.jpg" style="padding:15px;"></img>
+                <img src="img/exec2012.jpg" style="padding:15px;height:230px;"></img>
+                <img src="img/sohrab.jpg" style="padding:15px;width:315px;height:230px;"></img>
             </div>
-          </div>
         </div>
+
 
     <h3>For more information, <a href="contact.html">contact us</a> or come to a WUTV general body meeting!</h3>
     <br><br>
