--- a/index.html
+++ b/index.html
@@ -64,25 +64,44 @@
   
   <img src="img/studio.jpg" style="width:100%;height:100%"></img>
   
-  <section>
+    <div class="visible-lg hidden-md hidden-sm hidden-xs">
     <div class="page-header">
         <h3>Newest content</h3>
         <div class="col-md-6">
-            <iframe width="560" height="315" src="//www.youtube.com/embed/uq02ChLnluE" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/uq02ChLnluE" frameborder="15" allowfullscreen></iframe>
             <p>Wash U News Episode 2: Thanksgiving Special</p>
             <br>
-            <iframe width="560" height="315" src="//www.youtube.com/embed/c_ndycqAwGY" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/c_ndycqAwGY" frameborder="15" allowfullscreen></iframe>
             <p>A Shot At Glory: Night at the Museum</p>
         </div>
         <div class="col-md-6">
-            <iframe width="560" height="315" src="//www.youtube.com/embed/xWu4J1hjh48" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/xWu4J1hjh48" frameborder="15" allowfullscreen></iframe>
             <p>Phantom Limb Music: Pilot</p>
             <br>
-            <iframe width="560" height="315" src="//www.youtube.com/embed/Z8WM1KCiBZs" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="//www.youtube.com/embed/Z8WM1KCiBZs" frameborder="15" allowfullscreen></iframe>
             <p>"Perspective": A Short Film by Ricardo Solis</p>
         </div>
     </div>
-  </section>
+    </div>
+    
+    <div class="hidden-lg visible-md visible-sm visible-xs">
+        <div class="page-header">
+            <h3>Newest content</h3>
+            <div class="text-center">
+                <iframe width="560" height="315" src="//www.youtube.com/embed/uq02ChLnluE" frameborder="15" allowfullscreen></iframe>
+                <p>Wash U News Episode 2: Thanksgiving Special</p>
+                <br>
+                <iframe width="560" height="315" src="//www.youtube.com/embed/c_ndycqAwGY" frameborder="15" allowfullscreen></iframe>
+                <p>A Shot At Glory: Night at the Museum</p>
+                <iframe width="560" height="315" src="//www.youtube.com/embed/xWu4J1hjh48" frameborder="15" allowfullscreen></iframe>
+                <p>Phantom Limb Music: Pilot</p>
+                <br>
+                <iframe width="560" height="315" src="//www.youtube.com/embed/Z8WM1KCiBZs" frameborder="15" allowfullscreen></iframe>
+                <p>"Perspective": A Short Film by Ricardo Solis</p>
+            </div>
+        </div>
+    </div>
+
 
 <div class="container">
     <div class="text-center">
