--- a/involved.html
+++ b/involved.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="page-header">
-
+      <div class="col-md-7" style="margin-right:60px;">
         <h3>Want to get involved with WUTV?</h3>
         <p>Great! There are a variety of ways to apply your talents and build experience in video production. Whether you want to start a show of your own, join an existing show, make a movie, become a staff member of WUTV, or even fill an executive role, WUTV has the resources to get it done. Check out pages listed on this site, or come to one of our meetings in the Danforth University Center Harvey Media Center, Saturdays at 1:00pm.</p>
         <h3>Become a WUTV Staff Member</h3>
@@ -74,13 +74,13 @@
         <p>The WUTV staff holds elections for all executive positions at end of the spring semester, and any vacated positions are filled going into the fall semester. Execs are given greater responsibilities and help shape WUTV for better or worse. We're a pretty tight-knit group, and we are all committed to WUTV's future. An executive position looks great on a resume, too!</p>
         <h3>Come to a WUTV meeting or <a href="contact.html">contact us</a> to get started!</h3>
         <br>
-
+      </div>
+      <div class="col-md-5 container-side visible-lg">
         <h3>WUTV Hall of Fame</h3>
         <h4>21st Century WUTV Leadership:</h4>
 
-        <div class="col-md-6">
             <h4>General Managers</h4>
-        
+            <small>
             <p>2000-2001: Daniel Beckmann</p>
             <p>2001-2002: Alison Small</p>
             <p>2002-2003: Alison Small</p>
@@ -96,10 +96,10 @@
             <p>2012-2013: Sohrab Golestani; Ben Andrews (spring)</p>
             <p>2013-2014: Sohrab Golestani</p>
             <p>2014-2015: Emma Kane</p>
-        </div>
-        <div class="col-md-6">
+            </small>
+
             <h4>Technical Managers</h4>
-        
+            <small>
             <p>2000-2001: Unknown</p>
             <p>2001-2002: Unknown</p>
             <p>2002-2003: Jonah Sobol</p>
@@ -115,14 +115,18 @@
             <p>2012-2013: Adam Cohen</p>
             <p>2013-2014: Adam Cohen (fall); Emma Kane (spring)</p>
             <p>2014-2015: Adam Cohen</p>
-        </div>
-        <p>*Accuracy unknown; some combination of these three</p>
+            <p>*Accuracy unknown; some combination of these three</p>
+            </small>
+      </div>
     </div>
 
-    <div class="text-center">
-        <h1><span class="glyphicon glyphicon-forward"></span></h1>
+    <div class="container">
+        <div class="col-md-12">
+            <div class="text-center">
+                <h1><span class="glyphicon glyphicon-forward"></span></h1>
+            </div>
+        </div>
     </div>
-</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
