--- a/contact.html
+++ b/contact.html
@@ -54,9 +54,11 @@
 </div>
 
     <div class="jumbotron">
-        <img src="img/logo.jpg" style="width:25%;height:25%;padding:15px;float:left"></img>
+        <img src="img/logo.jpg" style="width:400px;padding:15px;float:left"></img>
         <br>
-        <h1><small>We're easy. Just turn us on.</small></h1>
+        <div class="hidden-sm hidden-xs">
+            <h1><small>We're easy. Just turn us on.</small></h1>
+        </div>
     </div>
             
     <div class="page-header">
@@ -77,7 +79,7 @@
         <p>Packages:</p>
         <p>Washington University in St. Louis<br>WUTV<br>Danforth University Center Room 355<br>6475 Forsyth Boulevard<br>St. Louis, MO 63105</p>
       </div>
-      <div class="col-md-9 hidden-xs hidden-sm">
+      <div class="col-md-8 hidden-xs hidden-sm">
           <br>
           <img src="img/exec2014.jpg" style="float:right;padding:15px;width:75%;height:75%;"></img>
           <img src="img/weirdexec2014.jpg" style="float:right;padding:15px;width:75%;height:75%;"></img>
