--- a/festivals.html
+++ b/festivals.html
@@ -53,9 +53,11 @@
   </div>
   
     <div class="jumbotron">
-        <img src="img/logo.jpg" style="width:25%;height:25%;padding:15px;float:left"></img>
+        <img src="img/logo.jpg" style="width:400px;padding:15px;float:left"></img>
         <br>
-        <h1><small>We're easy. Just turn us on.</small></h1>
+        <div class="hidden-sm hidden-xs">
+            <h1><small>We're easy. Just turn us on.</small></h1>
+        </div>
     </div>
 
     <div class="page-header">
