--- a/hire.html
+++ b/hire.html
@@ -63,10 +63,12 @@
   </div>
 
     <div class="page-header">
+        <div class="container">
         <h3>Hire WUTV</h3>
         <p>If you're looking for a student videographer or editor, you've come to the right place. While WUTV does not accept commissioned projects, we can connect you with videographers who come equipped with their own professional equipment and editors with access to their own software. We’d love to set you up with a student who can help capture your event!</p>
         <p>In the past, WUTV members have filmed Ashoka’s Diwali, LNYF, and ALAS’s Carnival, as well as dozens of a cappella concerts and student theater productions. WUTV members have also helped produce promotional videos for groups on campus and many members are involved with marketing, communications, and alumni + development departments across the university. Certain members have experience creating original advertising content for startups, music videos for local artists, and promotional materials for groups outside of the Washington University community, as well.</p>
         <p>Let us know about your project in the form below. Whatever your video production needs, we'll try to match you with an experienced independent contractor who will contact you with a quote.</p>
+        </div>
     
     <form name="htmlform" method="post" action="html_form_send.php">
         <table width="450px">
