--- a/involved.html
+++ b/involved.html
@@ -63,6 +63,7 @@
 </div>
 
     <div class="page-header">
+        <div class="container">
       <div class="col-md-7" style="margin-right:60px;">
         <h3>Want to get involved with WUTV?</h3>
         <p>Great! There are a variety of ways to apply your talents and build experience in video production. Whether you want to start a show of your own, join an existing show, make a movie, become a staff member of WUTV, or even fill an executive role, WUTV has the resources to get it done. Check out pages listed on this site, or come to one of our meetings in the Danforth University Center Harvey Media Center, Saturdays at 1:00pm.</p>
@@ -120,6 +121,7 @@
             <p>*Accuracy unknown; some combination of these three</p>
             </small>
       </div>
+    </div>
     </div>
 
     <div class="container">
