--- a/programming.html
+++ b/programming.html
@@ -62,6 +62,10 @@
     </div>
 </div>
 
+<div class="hidden-lg hidden-md">
+    <br><br>
+</div>
+
     <div class="page-header">
         <h3>Programming</h3>
         <p>WUTV tries to create an environment in which any individual looking to create content can walk in and get started. As part of our mission as a group, we strive to help Wash U students and campus groups through teaching the technical aspects of film production to anyone who expresses an interest in learning. If you are interested in creating video content with WUTV or even just getting involved in an established show, with minimal training you can be on your way to success!</p>
