--- a/about.html
+++ b/about.html
@@ -63,10 +63,12 @@
 </div>
 
     <div class="page-header">
+        <div class="container">
         <h3>About Us</h3>
         <p>Founded in the spring of 1996, WUTV is Washington University’s student-run A/V production group. We support education and advancement for students seeking hands on experience in broadcast television and related industries, as well as for students who simply have an interest in film or television. In doing so, WUTV provides a venue for the student body of Washington University to explore their interests through original student programming and coverage of campus events viewable for free on Vimeo and Youtube.</p>
         <p>We also offer open sessions of hands-on technical training in all aspects of video production. Join us with no experience and leave us a capable camera operator, editor, or producer.</p>
         <p>We strive to promote creation and expression across the Washington University community. We, passionate creators, use audiovisual media with the intent to change, entertain, or thrill our viewers.</p>
+        </div>
        
        <h3>Frequently Asked Questions</h3>
        
